<?xml version="1.0"?>
<package format="2">
  <name>joy</name>
  <version>0.0.0</version>
  <description>
    ROS driver for a generic Linux joystick. The joy package contains joy_node,
    a node that interfaces a generic Linux joystick to ROS. This node publishes
    a "Joy" message, which contains the current state of each one of the
    joystick's buttons and axes. Tools to capture and play back images to and
    from DDS subscriptions and publications.
  </description>
  <maintainer email="mquigley@osrfoundation.org">Morgan Quigley</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
